# harp.device.valve-controller

./: .gitignore  README.md  device.yml
firmware/: CMakeLists.txt
firmware/inc/: config.h  valve_controller_app.h  valve_driver.h
firmware/src/: main.cpp  valve_controller_app.cpp  valve_driver.cpp
hardware/board/harp.breakout.mini-clamp/: harp.breakout.mini-clamp.kicad_pcb  harp.breakout.mini-clamp.kicad_pro  harp.breakout.mini-clamp.kicad_sch
hardware/board/harp.device.valve-controller/: board_power.kicad_sch  isolated_usb_rp2040.kicad_sch  valve-controller.kicad_pcb  valve-controller.kicad_pro  valve-controller.kicad_sch  valve_control.kicad_sch  valve_ctrl2.kicad_sch
software/pyharp/: app_registers.py  energize_valves.py  get_info.py  set_valve_cfg_settings.py  toggle_aux_gpios.py  toggle_valve.py  wait_for_input_events.py
